[gd_scene load_steps=4 format=3 uid="uid://de5p3klliy8kd"]

[ext_resource type="Script" path="res://player/player.gd" id="1_gj6sc"]
[ext_resource type="PackedScene" uid="uid://e88o473woquo" path="res://player/hand/left_arm.tscn" id="2_pxbtt"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rjm1h"]
radius = 0.3

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("armNode") groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
platform_floor_layers = 4290772991
script = ExtResource("1_gj6sc")
armNode = NodePath("head_node/Camera3d/LeftArm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_rjm1h")

[node name="FlashLight" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.999391, 0, 0.0348995, 0, 1, 0, -0.0348995, 0, 0.999391, 0.147665, 0.5, 0)
spot_range = 12.3654
spot_angle = 38.4802

[node name="head_node" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3d" type="Camera3D" parent="head_node"]

[node name="LeftArm" parent="head_node/Camera3d" instance=ExtResource("2_pxbtt")]

[node name="CheckDoorRaycast3D" type="RayCast3D" parent="head_node/Camera3d"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -2, 0)

[node name="HEY THATS ME!" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LooksBetter" type="MarginContainer" parent="HEY THATS ME!"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 20

[node name="WhoMadeIt?" type="RichTextLabel" parent="HEY THATS ME!/LooksBetter"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/outline_size = 8
bbcode_enabled = true
text = "[center]Made with love by [wave]Pomelo[/wave] | Important: Read Documentation[/center]"
fit_content = true
scroll_active = false
